bluejay-parser/tests/snapshots/schema_definition_integration_test__error@referenced_type_is_not_an_output_type.graphql.snap
---
source: bluejay-parser/tests/schema_definition_integration_test.rs
expression: formatted_errors
input_file: bluejay-parser/tests/test_data/schema_definition/error/referenced_type_is_not_an_output_type.graphql
---
Error: Referenced type `MyInput` is not an output type
   ╭─[ referenced_type_is_not_an_output_type.graphql:6:12 ]
   │
 6 │   myField: MyInput!
   │            ───┬───  
   │               ╰───── Not an output type
───╯
